1/3/2011 deprecated SwingUtils.centerDialogInParent, use more general SwingUtils.centerInParent
1/3/2011 #2624, add ability to suppress warning when optional localized strings are missing
1/3/2011 #2624, Credits dialog: read credits from translated strings file, fix hyperlinks, add KSU-specific code
1/3/2011 #2640, update About dialog copyright to 2011
12-30-2010: #2624, major rewrite of CreditsDialog (messy, difficult to extend), added stubs for Translation credits
12-23-2010: in Property<T>, changed defaultValue to initialValue, and made getInitialValue public
12-21-2010: #2623, factor out common behavior for "Reset All" into ResetAllDelegate
12-21-2010: #2623, create ResetAllButtonNode, same functionality as ResetAllButton but for Piccolo buttons
12-21-2010: removed Property<T>.is, superclass should not create subclass (seems to have needed only by questionable syntax in GravityAndOrbitsCanvas)
12-21-2010: rename IsSelected to ValueEquals, to remove association with radio buttons
12-21-2010: change order of args to IsSelected to be consistent with PropertyRadioButton
12-16-2010: Improved ImmutableVector2D math API, adding plus, minus and times
12-16-2010: Improved toString for ImmutableVector2D and Property<T>
Changed some of the game strings - "Best" to "Your Best" and "New Best!" to "Your New Best".
Changed some of the game strings - "PERFECT!" to "Perfect", "NEW BEST!" to "New Best!", "Start!" to "Start". 
Added PropertyRadioButton, which wires up a JRadioButton to a property of type T in an enum-style Property<T>.
Moved spline computations from phetcommon to common/spline since it depends on Jama
Moved spline computations from energy-skate-park to phetcommon for reuse in fluid-pressure-and-flow
11-29-2010: made ModelViewTransform and ImmutableVector2D use Point2D and Point2D.Double more appropriately
11-29-2010: added ImmutableVector2D.getDistance
11-19-2010: made Property<T>.getDefaultValue() protected so it doesn't appear in code completion