@@ -1,3 +1,4 @@
+1/3/2011 #2624, display KSU credits window during sim launch sequence
 1/3/2011 deprecated SwingUtils.centerDialogInParent, use more general SwingUtils.centerInParent
 1/3/2011 #2624, add ability to suppress warning when optional localized strings are missing
 1/3/2011 #2624, Credits dialog: read credits from translated strings file, fix hyperlinks, add KSU-specific code
